@@ -1,5 +1,9 @@
 11/23/2005 Bob Rossi <bob@brasko.net>
 
+	* RELEASE_TODO: Update.
+
+11/23/2005 Bob Rossi <bob@brasko.net>
+
 	* RELEASE_TODO: Rearrange items.
 
 11/23/2005 Bob Rossi <bob@brasko.net>
